# Etraval-agent

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  generate_demo_data.py  main.py  pyproject.toml  readme.md  requirements.txt
a2a_server/: __init__.py  attraction_server.py  router_A2Aagent_Server.py  ticket_server.py  visual_server.py  weather_server.py
configs/: llm_config.py
evaluate/: evaluator.py
frontend/: Dockerfile  index.html
knowledge_base/: __init__.py
mcp_server/: __init__.py  mcp_knowledge_server.py  mcp_review_server.py  mcp_ticket_server.py  mcp_weather_server.py
multi_modal/: __init__.py
prompts/: user_prompts.py
sql/: import_db.py  mysql_schema.sql
sql/data/: concert_tickets.csv  flight_tickets.csv  train_tickets.csv  weather_data.csv
test/: test_intent_recognition.py
utils/: curl_demo.py  spider_weather.py
