[project]
name = "etraval-agent"
version = "3.0.0"
description = "多智能体旅行助手系统 - 基于A2A协议，支持天气查询、票务预订、景点识别与推荐"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi>=0.136.1",
    "fastmcp==3.0.1",
    "langchain==0.3.27",
    "langchain-community==0.3.31",
    "langchain-core==0.3.79",
    "langchain-mcp-adapters==0.1.13",
    "langchain-openai==0.3.35",
    "mysql-connector-python==9.5.0",
    "pandas>=2.0.0",
    "python-a2a==0.5.4",
    "python-dotenv>=1.0.0",
    "pytz==2025.2",
    "requests>=2.32.0",
    "schedule>=1.2.2",
]

[project.optional-dependencies]
knowledge = ["pymilvus>=2.4.0", "sentence-transformers>=3.0.0"]
visual = ["openai>=1.0.0", "paddlepaddle>=2.6.0", "paddleocr>=2.8.0", "pillow>=10.0.0"]
all = ["pymilvus>=2.4.0", "sentence-transformers>=3.0.0", "openai>=1.0.0",
       "paddlepaddle>=2.6.0", "paddleocr>=2.8.0", "pillow>=10.0.0"]
